# Phishing_Prediction_Model

./: README.md  main.py  pyproject.toml
deployment/: app.py  features.pkl  pca.pkl
research/: Phishing (AutoML).ipynb  Phishing.ipynb  Phissing.ipynb  final_model.pkl  phissing_1.ipynb  phissing_2.ipynb  phss.ipynb  preprocessor.pkl  test_input.csv
