[project]
name = "phissing-prediction-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flaml>=2.5.0",
    "imbalanced-learn>=0.14.1",
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
    "xgboost>=3.2.0",
]
